@@ -18,14 +18,14 @@ EXTRA_DIST = List_GEN.m
 
 SRC = Array.m Collection.m InputStream.m List.m \
 	List_linked.m List_mlinks.m Map.m OrderedSet.m OutputStream.m Set.m \
-	String.m collections.m predicates.m
+	StringObject.m collections.m predicates.m
 
 libcollections_la_SOURCES = $(SRC)
 libcollections_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE)
 
 collections_HEADERS = Array.h Collection.h InputStream.h List.h List_GEN.h \
 	List_linked.h List_mlinks.h Map.h OrderedSet.h OutputStream.h Set.h \
-	String.h collections.h predicates.h
+	StringObject.h collections.h predicates.h
 
 install-data-local:
 	$(INSTALL_DATA) $(module_headers) $(collectionsdir)
